name:                makefile
version:             0.1.0.0
description:         Simple Makefile parser
homepage:            http://github.com/nmattia/mask
license:             MIT
license-file:        LICENSE
author:              Nicolas Mattia
maintainer:          nicolas@nmattia.com
copyright:           2016 Nicolas Mattia
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
  exposed-modules:
                        Data.Makefile
                      , Data.Makefile.Internal
                      , Data.Makefile.Parse
                      , Data.Makefile.Parse.Internal


test-suite test
  hs-source-dirs:      src
  default-language:    Haskell2010
  type:       exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base
                     , attoparsec
                     , bytestring
                     , doctest
                     , Glob
                     , makefile

