name:                   makefile
version:                1.0.0.4
synopsis:            Simple Makefile parser and generator
description:
  This package provides a few @Attoparser@ parsers and convenience functions
  for parsing and generating Makefiles.

  The datatypes used for describing Makefiles are located in 'Data.Makefile'.
  The parsers and parsing functions are located in 'Data.Makefile.Parse'.
  The generating and encoding functions are located in 'Data.Makefile.Render'.

  To parse a Makefile in the current folder, simply run 'parseMakefile'. To
  parse a Makefile located at @path@, run 'parseAsMakefile' @path@. To parse a
  Makefile from a Text @txt@, run 'parseMakefileContents txt`.
  To encode a @Makefile@, run 'encodeMakefile'.

homepage:               http://github.com/nmattia/mask
license:                MIT
license-file:           LICENSE
author:                 Nicolas Mattia
maintainer:             nicolas@nmattia.com
copyright:              2016-2017 Nicolas Mattia
category:               Parsing
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
  test-data/basic/Makefile1
  test-data/basic/Makefile2
  test-data/elfparse/Makefile

source-repository head
  type:     git
  location: https://github.com/nmattia/mask.git

library
  hs-source-dirs:       src
  default-language:     Haskell2010
  build-depends:        base         >= 4.7 && < 5
                      , attoparsec   >= 0.12
                      , text         >= 1.1
  exposed-modules:
                        Data.Makefile
                      , Data.Makefile.Parse
                      , Data.Makefile.Parse.Internal
                      , Data.Makefile.Render
                      , Data.Makefile.Render.Internal
  ghc-options:        -Wall


test-suite test
  hs-source-dirs:       src
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              Test.hs
  build-depends:        base
                      , attoparsec   >= 0.12
                      , tasty        >= 0.11
                      , tasty-hunit  >= 0.9
                      , tasty-quickcheck >= 0.8
                      , text         >= 1.1
                      , doctest      >= 0.9
                      , Glob         >= 0.7 && < 0.9
                      , QuickCheck   < 2.11
                      , makefile
  other-modules:        Data.Makefile
                      , Data.Makefile.Parse
                      , Data.Makefile.Parse.Internal
                      , Data.Makefile.Render
                      , Data.Makefile.Render.Internal
